Archive2/1d/d342a1d0d37158/output
main.cpp:23:12: error: invalid universal character
  print( U"\U001F1800" );  // non-BMP left arrow "<--"
           ^~~~~~~~~~
1 error generated.
